--- a/templates/index.html
+++ b/templates/index.html
@@ -214,7 +214,7 @@
                     headers: {
                         'Content-Type': 'application/x-www-form-urlencoded',
                     },
-                    body: `message=${encodeURIComponent(userMessage)}`,
+                    body: `phone_number=${encodeURIComponent(phoneNumber)}&user_name=${encodeURIComponent(userName)}`, // Include the name
                 })
                 .then(response => response.json())
                 .then(data => {
